# pattern-atlas-static

./: .gitignore  README.md  pyproject.toml
static_patternatlas/: __init__.py  __main__.py  client.py  render.py
static_patternatlas/templates/: base.jinja2  pattern.jinja2  styles.css
