[tool.poetry]
name = "static_patternatlas"
version = "0.1.0"
description = "Static site generation from Pattern Atlas data."
authors = ["University of Stuttgart - IAAS"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
httpx = "^0.27.2"
mistune = "^3.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.7.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
